# inc_diagnostics

./: .bazelrc  .gitignore  MODULE.bazel  versions.json
.github/: CODEOWNERS
.github/workflows/: build_linux.yml  copyright.yml  docs.yml  format.yml
main/: index.html  needs.json  schema_violations.json
pr-3/: genindex.html  index.html  schema_violations.json  search.html  searchindex.js
pr-5/: genindex.html  index.html  schema_violations.json  search.html
score/mw/diag/api/: BUILD  README.md  app_registration.rs  common.rs  data_resource.rs  diag_api.rs  operation.rs  registration.rs  simple_operation.rs  uds.rs  uds_adapters.rs
score/mw/diag/design/: diag_api_rust.puml
score/mw/diag/example/: BUILD  diag_runtime.rs  example.rs  lib_runtime.rs
score/mw/diag/runtime/: BUILD  diag_runtime.rs  lib_runtime.rs  opensovd_registrar.rs
