# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(name = "score_diagnostics")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_x86_64_toolchain",
)

bazel_dep(name = "rules_python", version = "1.8.3", dev_dependency = True)

# Python 3.12: Required for testing infrastructure and code generation tools
_PYTHON_VERSION = "3.12"

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    is_default = True,
    python_version = _PYTHON_VERSION,
)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
    dev_dependency = True,
)
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "module_template_docs_hub_env",
    python_version = _PYTHON_VERSION,
    requirements_lock = "@score_docs_as_code//src:requirements.txt",
)
use_repo(pip, "module_template_docs_hub_env")

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.68.1-score")
bazel_dep(name = "score_crates", version = "0.0.10")

bazel_dep(name = "score_toolchains_rust", version = "0.9.1", dev_dependency = True)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# any further required individual rust creates shall get added below
crate.spec(
    package = "futures",
    version = "0.3.31",
)
crate.spec(
    package = "indexmap",
    version = "2.11.4",
)
crate.spec(
    package = "serde_json",
    version = "1.0.143",
)
crate.spec(
    features = [
        "macros",
        "rt",
        "sync",
        "time",
    ],
    package = "tokio",
    version = "1.47.1",
)
crate.from_specs(
    name = "score_crate_index",
    supported_platform_triples = [
        "aarch64-unknown-linux-gnu",
        "aarch64-unknown-nto-qnx800",
        "x86_64-pc-nto-qnx800",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-none",
    ],
)
use_repo(crate, "score_crate_index")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.18")

# functional deps
bazel_dep(name = "score_baselibs", version = "0.2.9")

# tooling
bazel_dep(name = "score_tooling", version = "1.1.2", dev_dependency = True)
bazel_dep(name = "score_devcontainer", version = "1.7.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "2.3.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

# docs-as-code
bazel_dep(name = "score_docs_as_code", version = "4.6.0", dev_dependency = True)
bazel_dep(name = "score_process", version = "1.6.0", dev_dependency = True)
